@@ -1,0 +1,4 @@
+(define-interface reinitializers-interface
+  (export make-reinitializer
+          reinitializer?))
+  
