@@ -1,0 +1,5 @@
+(define-structure reinitializers reinitializers-interface
+  (open scheme
+        define-record-types
+        records)
+  (files reinitializer))
