@@ -1,6 +1,8 @@
 version 0.6
+* New s48 library: reinitializer
 * New scsh libraries: file-mode
 * New s48 libraries: SRFI-34/SRFI-35 exceptions and conditions, SRFI-10
+
 
 version 0.5 2003-11-19
 * New s48 libraries: procedure-tables.
